Fix style of the app menu on mobile now we have icons

--- a/agile-web/src/main/resources/org/headsupdev/agile/web/mobile.css
+++ b/agile-web/src/main/resources/org/headsupdev/agile/web/mobile.css
@@ -60,7 +60,7 @@
     left: 0;
     top: 64pt;
     width: 100%;
-    height: 24pt;
+    height: 28pt;
 
     padding: 0 !important;
     list-style: none;
@@ -68,9 +68,26 @@
 
 #mainmenu li {
     display: inline-block;
-    padding: 6pt 5pt !important;
-    width: 18pt;
-    overflow: hidden
+    padding: 0 !important;
+    width: 32pt;
+    overflow: hidden;
+
+    border-left: none !important;
+    border-right: 1px solid #666666;
+}
+
+#mainmenu li span {
+    display: none;
+    padding: 0 !important;
+}
+
+#mainmenu li img {
+    padding: 7pt !important;
+}
+
+#mainmenu li.mainmenu-item-selected img {
+    padding-top: 3pt !important;
+    border-top: 4pt solid #2e3667;
 }
 
 #subselect {
@@ -214,7 +231,7 @@
 
 #content {
     padding: 2px 2px;
-    margin-top: 96pt;
+    margin-top: 100pt;
     margin-bottom: 65px;
 }
 
@@ -321,4 +338,5 @@ div.download a {
 .activity-group .history-summary {
     display: none !important;
 }
+
 
